# screencapturekit-rs

./: Cargo.toml  README.md  build.rs
examples/: 22_stream_capture.rs  f_capture_sample.rs  f_multithread.rs
src/: cg_display.rs  lib.rs  screenshot_manager.rs
src/ffi/: mod.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreGraphics/: CGDisplay.swift
swift-bridge/Sources/ScreenCaptureKitBridge/: Stream.swift
