[package]
name = "capscreen_macos"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wwog/screencapturekit-rs"
repository = "https://github.com/wwog/screencapturekit-rs"
documentation = "https://doom-fish.github.io/screencapturekit-rs/screencapturekit/"
description = "fork from screencapturekit-rs, add CoreGraphics Api, CGDisplay Api, capture_image_with_stream"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["screencapturekit", "screen-capture", "macos", "video", "audio"]
categories = ["multimedia", "os::macos-apis", "api-bindings"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "screencapturekit"
crate-type = ["lib"]

[features]
default = []
cargo-clippy = []

# Async support (executor-agnostic, works with any async runtime)
async = []

# macOS version feature flags
# Enable features for specific macOS versions
macos_13_0 = []
macos_14_0 = ["macos_13_0"]
macos_14_2 = ["macos_14_0"]
macos_14_4 = ["macos_14_2"]
macos_15_0 = ["macos_14_4"]
macos_15_2 = ["macos_15_0"]
macos_26_0 = ["macos_15_2"]

[dependencies]

[dev-dependencies]
png = "0.18"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "test-util"] }
winit = "0.28"
raw-window-handle = "0.5"

[package.metadata.docs.rs]
# Build documentation with all features enabled
all-features = true
# docs.rs builds on Linux, but this crate only works on macOS
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
# Enable rustdoc unstable features for better docs
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "16_full_metal_app"
path = "examples/16_full_metal_app/main.rs"
required-features = ["macos_14_0"]
